kubernetes/.archive/gateway-api/app/duckdns.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-duckdns
  annotations:
    cert-manager.io/cluster-issuer: duckdns-cluster-issuer-stag
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: ${DUCKDNS_DOMAIN}
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: ${DUCKDNS_DOMAIN}
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: duckdns-tls
    - name: http-wildcard
      port: 80
      protocol: HTTP
      hostname: "*.${DUCKDNS_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      port: 443
      protocol: HTTPS
      hostname: "*.${DUCKDNS_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: duckdns-tls
    - name: 8080-http-wildcard
      port: 8080
      protocol: HTTP
      hostname: "*.${DUCKDNS_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
